--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,13 +4,16 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #000000;
+  --green-primary: #03C303;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #000000;
     --foreground: #ededed;
+    --green-primary: #03C303;
+
   }
 }
 
